--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,11 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     //firebase
-    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.6'
+    implementation 'com.google.firebase:firebase-auth:16.1.0'
+
+    //otp verification
+    implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.0.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
