--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.6'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
 
-    //otp verification
+    //otp verification View
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.0.1'
+
+    //design support lib
+    implementation 'com.android.support:design:28.0.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
