--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ dependencies {
     //firebase
     implementation 'com.google.firebase:firebase-core:16.0.6'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
+    implementation 'com.google.firebase:firebase-database:16.0.5'
+
+    //geofire
+    implementation 'com.firebase:geofire-android:2.3.1'
 
     //otp verification View
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.0.1'
