--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -21,6 +22,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"></activity>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="64e4979b3c16d352147c23fefb4997f79f53c963" />
     </application>
 
 </manifest>
