--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     //recyclerView
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
+    implementation 'com.android.support:preference-v7:28.0.0'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
